hide hamburger on desktop, fixed form width on mobile

--- a/src/elements/forms.scss
+++ b/src/elements/forms.scss
@@ -5,6 +5,10 @@ input[type="text"], input[type="email"], textarea, select {
   margin: 0 0 5px;
   padding: 10px;
   margin-bottom: 1rem;
+
+  @include breakpoint(xs) {
+    width: 97%;
+  }
 }
 input[type="text"]:focus, input[type="email"]:focus, textarea:focus, select:focus {
  outline: 0;
@@ -48,7 +52,7 @@ option:checked {
 }
 .checkbox, .radio {
   display: inline-block;
-  
+
   input[type="checkbox"],
   input[type="radio"] {
     position: absolute;
