--- a/src/elements/notification.scss
+++ b/src/elements/notification.scss
@@ -51,7 +51,7 @@
 
     @include breakpoint(xs) {
      margin-left: 93%;
-     top: -128px;
+     top: -100px;
     }
 
     .icon {
